# vancelle

./: .dockerignore  .envrc  .gitignore  .justfile  .pre-commit-config.yaml  .rsync-filter  Dockerfile  Justfile  LICENSE  Makefile  Procfile  README.md  app.json  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.github/: CONTRIBUTING.md
.run/: All.run.xml  Flask.run.xml  Sass.run.xml  Spotlight.run.xml  pytest.run.xml
docs/: dev.md  dokku.md  sentry.md  todo.md
migrations/: alembic.ini
migrations/versions/: bb59e6b6ad0b_.py
src/vancelle/: app.py  converters.py  inflect.py  shelf.py  types.py
src/vancelle/assets/: layout.scss  style.scss
src/vancelle/assets/components/: board.scss  details-box.scss  headers.scss  panel-library-card.scss  panel.scss  truncate.scss
src/vancelle/assets/elements/: button.scss  form.scss  table.scss
src/vancelle/assets/vancelle/: _block.scss  _colours.scss  _typography.scss
src/vancelle/blueprints/: board.py  bulma.py  data.py  entry.py  errors.py  goodreads.py  home.py  record.py  remote.py  source.py  user.py  work.py
src/vancelle/blueprints/board/: blueprint.py
src/vancelle/clients/: client.py
src/vancelle/clients/goodreads/: common.py  csv.py  html.py  http.py
src/vancelle/controllers/: entry.py  record.py  remote.py  settings.py  source.py  work.py
src/vancelle/ext/: flask.py  flask_login.py  sqlalchemy.py  structlog.py  types.py  wtforms.py
src/vancelle/extensions/: __init__.py  ext_html.py  ext_htmx.py  htmx.py  sentry.py
src/vancelle/forms/: bootstrap.py  entry.py  pagination.py  record.py  remote.py  source.py  user.py  work.py
src/vancelle/html/: helpers.py  helpers_test.py
src/vancelle/migrations/: 1719394304_added_entry_time_fetched.py  1719936902_added_work_notes.py
src/vancelle/models/: __init__.py  base.py  details.py  entry.py  properties.py  record.py  remote.py  work.py
src/vancelle/static/: script.js
src/vancelle/templates/: base.html  cache.html
vancelle/: __init__.py  app.py  converters.py  metadata.py  models.py  shelf.py  types.py
vancelle/blueprints/: admin.py  bulma.py  cache.py  data.py  errors.py  goodreads.py  health.py  home.py  record.py  remote.py  user.py  work.py
vancelle/blueprints/board/: blueprint.py
vancelle/blueprints/data/: __init__.py  goodreads.py  notion.py
vancelle/clients/: client.py  common.py
vancelle/clients/goodreads/: common.py  csv.py  html.py  http.py  types.py
vancelle/clients/images/: client.py
vancelle/clients/openlibrary/: client.py  types.py
vancelle/clients/royalroad/: client.py
vancelle/clients/steam/: client_store_api.py  client_web_api.py
vancelle/clients/tmdb/: client.py
vancelle/controllers/: admin.py  cache.py  data.py  record.py  remote.py  user.py  work.py
vancelle/controllers/sources/: base.py  goodreads.py  imported.py  openlibrary.py  royalroad.py  steam.py  tmdb.py
vancelle/ext/: flask_sqlalchemy.py  httpx.py  requests.py  sqlalchemy.py  structlog.py  wtforms.py
vancelle/extensions/: __init__.py  ext_apis.py  ext_html.py  ext_htmx.py  ext_sentry.py
vancelle/forms/: user.py
vancelle/html/: document.py  helpers.py  hotmetal.py  types.py
vancelle/html/bootstrap_icons/: __init__.py
vancelle/html/bulma/: columns.py
vancelle/html/components/: title.py
vancelle/lib/heavymetal/: __init__.py  components.py  core.py  core_test.py  html.py  html_test.py  types.py
vancelle/lib/pagination/: flask.py  pagination.py
vancelle/migrations/: env.py  script.py.mako
vancelle/migrations/versions/: 62db8f1cc6b1_.py  975d0e85dc42_.py
vancelle/models/: base.py  details.py  metadata.py  properties.py  record.py  remote.py  types.py  user.py  work.py
vancelle/static/: browserconfig.xml  manifest.json  script.js
vancelle/static/src/: colours.scss  htmx.scss  layout.scss  script.js  style.scss  typography.scss
vancelle/templates/: admin.html  base.html  cache.html  error.html  home.html  http_error.html  login.html  toast.html
vancelle/templates/components/: bulma.html  controls.html  forms.html  layout.html  links.html  metadata.html  navbar.html  pagination.html  search.html  toast.html
vancelle/templates/record/: detail.html
vancelle/templates/remote/: detail.html  flash_already_exists.html  index.html  manage.html  search.html
vancelle/templates/user/: index.html  profile.html
vancelle/templates/work/: create.html  detail.html  home.html  index.html  index_board.html  index_list.html  index_table.html  update.html
vancelle/tests/: conftest.py
vancelle/tests/ext/: test_flask.py
vancelle/tests/extensions/: test_ext_html.py
vancelle/tests/fixtures/: goodreads-1.csv
(+183 files in other folders)
