[tool.poetry]
name = "vancelle"
version = "0.1.0"
description = ""
authors = ["Sam Clements <sam@borntyping.co.uk>"]
license = "Mozilla Public License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
Flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-debugtoolbar = "^0.14.1"
flask-injector = "^0.15.0"
flask-login = "^0.6.3"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
hishel = {extras = ["sqlite"], version = "^0.0.24"}
httpx = "^0.27.0"
humanize = "^4.9.0"
inflect = "^7.0.0"
platformdirs = "^4.1.0"
psycopg = {extras = ["binary"], version = "^3.1.14"}
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
sentry-sdk = {extras = ["flask", "sqlalchemy"], version = "^1.38.0"}
setuptools = "^69.0.2"
sqlalchemy = "^2.0.23"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
djhtml = "^3.0.6"
mypy = "^1.7.1"
pytest = "^7.4.2"
types-requests = "^2.31.0.10"

[tool.poetry.group.server.dependencies]
gunicorn = "^21.2.0"

[tool.black]
line-length = 128

[tool.djlint]
profile="jinja"
indent=2
blank_line_after_tag="load,extends,include,endblock"
blank_line_before_tag="load,extends,include,macro,block"
max_attribute_length=120

[tool.mypy]
namespace_packages = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=vancelle/migrations"
filterwarnings = [
    "ignore:The '__version__' attribute is deprecated:DeprecationWarning",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
